Fix link spacing

--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,15 @@ body{
 footer{
     align-self: flex-start;
     flex-shrink: 1;
+    margin-top: 25px;
 }
 
 .content{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    gap: 50px;
 }
 
 .logo{
@@ -79,5 +81,5 @@ footer{
     color: var(--light-teal);
     font-family: Georgia, 'Times New Roman', Times, serif;
     flex-shrink: 0;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
